# learnmlir

./: .gitignore  .gitmodules  README.md  gdb.conf
docs/: DialectConversionFramework.drawio  LLVMIR.md  MLIRContext.md  affine.md  build.sh  clean.sh  common_errors.md  debug.md  fuse_gather_ops.md  interface.cc  is_detected.h  llvm.md  llvm.sh  mlir.md  mlir_APInt.md  mlir_StringAttr.md  mlir_SymbolTable.md  mlir_argument_dependent_lookup.md  mlir_attributes_and_types.md  mlir_builtin_types.md  mlir_dialect_conversion.md  mlir_interface.md  mlir_io.md  mlir_legalize.md  mlir_llvm_struct.md  mlir_print.md  mlir_tablegen.md  mlir_tensor_encoding.md  mlir_trait.md  mlir_type_id.md  mlir_uniquing_process.md  num_interface_types_t.h  nvptx.md  tensorflow.md  toy.md
examples/: README.md  WORKSPACE  bazel  bazel-bin  bazel-examples  bazel-out  bazel-testlogs  build.sh  run.sh
examples/compile_ptx/: BUILD  input.ptx  main.cc
examples/llvm_mlir_constant/: BUILD  input.mlir  main.cc  output.mlir
examples/lower_builtin_llvmir/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
examples/lower_gpu_ops/: BUILD  input.mlir  main.cc
examples/lower_lmhlo_ops/: BUILD  build.sh  main.cc  output.mlir
examples/lower_toy_dialect/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  input.mlir  main.cpp  mock.cpp  notes.md  run.sh  test.cpp  toy_dialect.cpp  toy_dialect.h  toy_ops.td  toy_passes.cpp  toy_passes.h  toy_passes.td  toy_to_arith_lowering.h
examples/mlir_argument_dependent_lookup/: .cmake.sha256  Dialect.cpp  Dialect.h  ExampleAttributes.td  README.md  main.cpp
examples/mlir_attribute/: CMakeLists.txt  Dialect.cpp  Dialect.h  ExampleAttributes.td  ExampleDialect.td  README.md  main.cpp
examples/mlir_dense_set/: README.md  main.cpp
examples/mlir_interface/: .cmake.sha256  CMakeLists.txt  Dialect.cpp  Dialect.h  ExampleDialect.td  ExampleInterface.td  Interface.cpp  Interface.h  main.cpp
examples/mlir_internal_storage/: .cmake.sha256  CMakeLists.txt  README.md  build.sh  main.cpp
examples/mlir_trait/: .cmake.sha256  CMakeLists.txt  Dialect.cpp  Dialect.h  ExampleDialect.td  ExampleTraits.td  README.md  Traits.h  main.cpp
examples/mlir_type_id/: main.cpp
examples/parse_dense_tensor/: BUILD  main.cc
examples/toy_compiler/: .gitignore  CMakeLists.txt  Makefile  add_two_tensors.toy  build.sh  clean.sh  lowering.mlir  main.cpp  run.sh  test.cpp
examples/toy_compiler/backend/: CMakeLists.txt  backend.cc  backend.h  cuda_utils.cc  cuda_utils.h  llvm_utils.cc  llvm_utils.h  nvidia_backend.cc  nvidia_backend.h  passes.cc  passes.h  passes.td  tile_loops_pass.cc  utils.cc  utils.h
examples/toy_compiler/common/: CMakeLists.txt  passes.cc  passes.h  passes.td
examples/toy_compiler/frontend/: AST.cpp  AST.h  CMakeLists.txt  Lexer.h  Parser.h  frontend.cc  frontend.cpp  frontend.h  toy_dialect.h  toy_ops.td
examples/toy_compiler/middleend/: CMakeLists.txt  middleend.cc  passes.cc
examples/toy_compiler/runtime/: CudaRuntimeWrappers.cpp
examples/triton_encodings/: CMakeLists.txt  README.md  input.mlir  main.cpp  run.sh
examples/triton_encodings/triton/Dialect/: CMakeLists.txt
examples/triton_encodings/triton/Dialect/Triton/IR/: CMakeLists.txt  Dialect.cpp  Dialect.h  TritonTypes.td  Types.cpp  Utility.h
examples/triton_encodings/triton/Dialect/TritonGPU/IR/: Attributes.h  CMakeLists.txt  CTAEncodingAttr.h  Dialect.cpp  Dialect.h  LayoutUtils.cpp  LayoutUtils.h  LinearLayout.cpp  LinearLayoutConversions.cpp  LinearLayoutConversions.h  TritonGPUAttrDefs.td  TritonGPUInterfaces.h  Types.cpp
ref/: affine.cc  atomic_add.cc  block_arguments.cc  common.h  const.cc  cuda_kernel_funcs_LowerLoopsToGPU.mlir  cuda_kernel_funcs_LowerTFtoLoops.mlir  dump_ir.cc  generic_converter.cc  gpu_kernel_to_blob_pass.cc  gpu_to_ptx.cc  is_valid_cluster.cc  kernel_creator.cc  kernel_creator.h  llvm.cc  llvm_utils.cc  llvm_utils.h  lmhlo.cc  loc.cc  match_and_rewrite.cc  memref.cc  module_to_object.cc  multithreading.cc  notes.md  nvidia_backend.cc  passes.cc  passes.h  passes.md  passes.td  predict_online_funcs_LowerLoopsToGPU.mlir  predict_online_funcs_LowerTFtoLoops.mlir  print.cc  print_small_vector.cc  reduce.cc  reduction.cc  roundup.cc  sony_debug_pass.cc  terminator.cc  type_converter.cc
study_disc_passes/: .bazelrc  .gitmodules  BUILD  README.md  WORKSPACE  build.sh  compile.sh  debug.mlir  input.mlir  main  main.cpp  output.mlir  run.sh  sync.sh
study_disc_passes/mlir/disc/transforms/: disc_passes.cc  disc_passes.h  disc_passes.td  disc_shape_optimization_utils.cc
study_triton_compiler/: .gitignore  CMakeLists.txt  README.md  build.sh  llvm.sh  output.cubin  output.ptx  sync.sh  triton_compiler
study_triton_compiler/scripts/: build.sh  llvm.sh
test/: Makefile  test  test.cpp
toy/: README.md  WORKSPACE  build.sh  build2.sh  omnibuild.sh  tablegen.sh  test2.sh
toy/Ch2/: BUILD  README.md  build.sh  run.sh  sample.mlir  test.cpp  test.sh  test1.mlir  test2.mlir  toy.mlir
toy/Ch2/include/toy/: Dialect.h  Ops.cpp.inc  Ops.h.inc
toy/Ch2/mlir/: Dialect.cpp
toy/Ch2/test/: test1.toy
toy/Ch3/: BUILD  README.md  build.sh  run.sh  test1.mlir
toy/Ch3/include/toy/: Ops.cpp.inc  Ops.h.inc
toy/Ch3/mlir/: ToyCombine.inc
toy/Ch3/test/: test1.toy
toy/pass1/: BUILD  README.md  build.sh  main.cc  run.sh
toy/pass1/include/: traverse.h
toy/pass1/include/toy/: toy_dialect.h
toy/pass1/mlir/: toy_dialect.cc  traverse.cc
toy/pass1/test/: graph.mlir
